Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17119

replicate_rewrite_db does not work for single char database name

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL)
    • 5.5.64
    • Replication
    • None
    • All

    Description

      mdev.test

      # TBF - difference in row level logging
      -- source include/have_binlog_format_mixed_or_statement.inc
      -- source include/master-slave.inc
       
      connection master;
      SET sql_log_bin= 0;
      create database x;
      SET sql_log_bin= 1;
      use x;
       
      connection slave;
      SET sql_log_bin= 0;
      create database y;
      SET sql_log_bin= 1;
      use y;
       
      --connection master
      create table t1(a int);
      insert into t1 values(1);
       
      --sync_slave_with_master
      select * from y.t1;
       
       
      --source include/rpl_end.inc
      
      

      mdev-slave.opt

      "--replicate-rewrite-db=x->y"
      

      While running this test case I get this error

      CURRENT_TEST: rpl.rpl_one_char_db_rewrt_db
      180902 19:14:02 [ERROR] Bad syntax in replicate-rewrite-db - empty FROM db!
       
      180902 19:14:02 [ERROR] Aborting
       
      
      

      Attachments

        Activity

          People

            sachin.setiya.007 Sachin Setiya (Inactive)
            sachin.setiya.007 Sachin Setiya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d 10m
                1d 10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.