MDEV-17119 replicate_rewrite_db does not work for single char database name

Fixed issue in logic.